--- a/apps/static/assets/css/ms_arr.css
+++ b/apps/static/assets/css/ms_arr.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
+.obl
+{
+    color:red; font-size:12px; font-weight:bold; margin-left: 5px; 
+}
+
 *{
     padding:0;
     margin:0;
@@ -443,5 +448,27 @@ select{
     .container .card .left-side {
            
      display: none;
+    }
+}
+
+/* Animación */
+.message {
+    text-align: center;
+    font-size: 24px;
+    margin-top: 20px;
+}
+.deslizar {
+    animation: 3s infinite alternate deslizar;
+}
+
+@keyframes deslizar {
+    from {
+    margin-right: 100%;
+    width: 120px
+    }
+
+    to {
+    margin-left: 100%;
+    width: 120px;
     }
 }
