--- a/apps/templates/home/Fiador/detalles_foo.html
+++ b/apps/templates/home/Fiador/detalles_foo.html
@@ -385,7 +385,7 @@
 {% comment %} <script src="/static/assets/repositorios/detail_inq.js"></script>  {% endcomment %}
 
 <script>
-    const server = 'http://192.168.2.24:8001'
+    const server = "http://192.168.2.14:8001";
     var datos = JSON.parse( localStorage.getItem('data_fiador'))
     var full = document.getElementById("nombre_full")
     var full_em = document.getElementById("nombre_full_em")
