--- a/apps/templates/home/cot_per.html
+++ b/apps/templates/home/cot_per.html
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div style="background-color:white" class="">
-            <label for="cotizar" class="h1 mb-4"> Cotizador Personalizado </label>
+            <label for="cotizar" class="h1 mb-4"> Cotizador</label>
         </div>   
 
         <div class="card card-body border-0 shadow mb-4">
