--- a/apps/templates/home/inquilinos/archivos_inquilino.html
+++ b/apps/templates/home/inquilinos/archivos_inquilino.html
@@ -148,13 +148,18 @@
                                 <label for="url_situacion_fiscal" class="form-label">Comprobante De Ingreso (Recibos de nomina o Estados de cuenta)</label>
                                 <input class="form-control"  id="Ingresos" accept="application/pdf" name="Ingresos" type="file" placeholder="URL">
                             </div>
-                            <div class="mb-3" id="div-buro">
-                                <label for="url_situacion_fiscal" class="form-label">Autorizacion para buró de credito</label>
-                                <input class="form-control"  id="Buro" name="Buro" accept="application/pdf" type="file" placeholder="URL">
+                            <div class="mb-3" id="div-ac" style="display:none;">
+                                <label for="url_situacion_fiscal" class="form-label">Link del archivo de Acta Constitutiva(Google Drive, Mega, ETC)</label>
+                                <input class="form-control"  id="Acta_constitutiva" name="Acta_constitutiva"  type="text" placeholder="URL">
                             </div>
                             <div class="mb-3" id="div-crl">
                                 <label for="url_situacion_fiscal" class="form-label">Carta De Recomendacion Laboral</label>
                                 <input class="form-control"  id="Recomendacion_laboral" name="Recomendacion_laboral" accept="application/pdf" type="file" placeholder="URL">
+                            </div>
+                            <p>Nota. En caso que le soliciten subir un documento en especial, hagalo en este espacio</p>
+                            <div class="mb-3" id="div-extras">
+                                <label for="url_situacion_fiscal" class="form-label">Documentos Extra</label>
+                                <input class="form-control"  id="Extras" name="Extras" accept="application/pdf" type="file" placeholder="URL">
                             </div>
                          
                           {% csrf_token %}
@@ -224,13 +229,12 @@
     $(document).ready(function() {
        
        $('#archivos').modal({ keyboard: false,backdrop: false })
-       
        $('#archivos').modal('show');
       
 
     });
 
-const server = 'http://192.168.2.24:8001'
+const server = 'http://192.168.2.14:8001'
 const configin = {
     headers: {
       'Content-Type': 'multipart/form-data',
@@ -249,22 +253,64 @@ btnSubmit.addEventListener("click", function (event) {
     var fileInputElement3 = document.getElementById("Rfc")
     
     var ingreso = document.getElementById("Ingresos")
-    var buro = document.getElementById("Buro")
+    var extras = document.getElementById("Extras")
     var rec_lab = document.getElementById("Recomendacion_laboral")
 
     console.log("ingreso",ingreso.files[0])
-    console.log("buro",buro.files[0])
+    console.log("extras",extras.files[0])
     console.log("Recomendacion_laboral",rec_lab.files[0])
 
     formData.append("Comp_dom", fileInputElement1.files[0]);
     formData.append("Ine", fileInputElement2.files[0]);
     formData.append("Rfc", fileInputElement3.files[0]);
     formData.append("Ingresos", ingreso.files[0]);
-    formData.append("Buro", buro.files[0]);
+    formData.append("Extras", extras.files[0]);
     formData.append("Recomendacion_laboral", rec_lab.files[0]);
+    formData.append("Acta_constitutiva", document.getElementById("Acta_constitutiva").value );
     formData.append("inquilino", document.getElementById("inquilino").value );
-    console.log(formData)
-    enviar_datos(formData)
+    console.log(formData.getAll('Acta_constitutiva'))
+    console.log(document.getElementById("Acta_constitutiva").value)
+    var next = true
+    if(fileInputElement1.files.length == 0){
+        Swal.fire({
+            icon: 'error',
+            title: 'Algo salio mal',
+            text: 'Comprobante De Docmicilio es obligatorio!'
+          })
+          next= false
+
+    }
+    if(fileInputElement2.files.length == 0){
+        Swal.fire({
+            icon: 'error',
+            title: 'Algo salio mal',
+            text: 'INE es obligatorio!'
+          })
+          next= false
+
+    }
+    if(fileInputElement3.files.length == 0){
+        Swal.fire({
+            icon: 'error',
+            title: 'Algo salio mal',
+            text: 'RFC es obligatorio!'
+          })
+          next= false
+
+    }
+
+    if(ingreso.files.length == 0){
+        Swal.fire({
+            icon: 'error',
+            title: 'Algo salio mal',
+            text: 'Comprobante de ingresos es obligatorio!'
+          })
+          next= false
+
+    }
+   
+    if(next)enviar_datos(formData)
+    
 })
 
 async function enviar_datos(formulario){
@@ -290,8 +336,8 @@ function obtenerInquilino(){
     document.getElementById("inquilino_nombre").value = `${datos.nombre} ${datos.apellido} ${datos.apellido1}`
     // ocultar documentos para pf o para pm
         if(datos.p_fom == "Persona Moral"){
-        document.getElementById("div-ingresos").style.display = 'none'
         document.getElementById("div-crl").style.display = 'none'
+        document.getElementById("div-ac").style.display = ''
 
         }
 
